--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,8 @@ data_service/env/
 data_service/.Python
 data_service/pip-selfcheck.json
 data_service/__pycache__
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
